# cinder-notes

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_alt.md  Code_Of_Conduct.md  Code_Of_Conduct_alt.md  LICENSE  README.md  README_alt.md  cinder-v0.md  cinder-v1.md  eslint.config.js  index.html  lint-staged.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test.tst  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  final-check.yml  node-setup.yml  release.yml  setup.yml  tests.yml  verify-pr.yml
.husky/: pre-commit
docs/: feat-e2e-testing.md
docs/archive/: changelog-v0.2.md  changelog-v0.5.md  featurelog-v0.1.md
docs/changelogs/: cinder-v0.2.md
docs/featurelogs/: cinder-v0.2.md
e2e/: editor.spec.ts  helpers.ts  layout.spec.ts  search.spec.ts  smoke.spec.ts  split-screen.spec.ts  welcome.spec.ts
scripts/: create-v0.2-issues.sh  sync-version.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  trash.rs  types.rs  watcher.rs  workspace.rs
src/__tests__/: setup.ts
src/components/: ThemeSwitcher.tsx
src/data/: mockFileSystem.ts
src/hooks/: useFileSystem.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useUpdater.ts  useWorkspace.ts
src/store/: storeBridge.ts  useAppStore.ts  useSplitStore.ts
src/theme/: cinderTheme.ts  (+3 more)
(+55 files in other folders)
