[package]
name = "cinder-notes"
version = "0.2.0"
description = "Minimal, local-first markdown note-taking app built with Tauri"
authors = ["7sg56"]
license = "MIT"
repository = "https://github.com/7sg56/cinder-notes"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
window-vibrancy = "0.5.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-updater = "2"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
